
  * HTML::Pretty: Fix wrong line numbers
  * Tilt template: Don't overwrite buffer always
  * Generator: add preamble and postamble which do nothing
  * Tilt template: don't overwrite streaming option
  * OptionHash: inherit valid keys
  * temple/html/safe: add poor man's html_safe? implementation (not required automatically)
  * Temple::Mixins::GrammarDSL - Add some missing match? methods

0.6.8

  * HTML::Fast add svg doctype
  * Render standalone html 5 attributes

0.6.7

  * HTML::Pretty - change some block level tags
  * Reduce memory allocations in immutable hash

0.6.6

  * Use default encoding utf-8
  * Escape also '
  * Try to load escape_utils by default

0.6.5

  * Added Filters::CodeMerger
  * Added Filters::Encoding
  * Added Filters::RemoveBOM
  * Added Generators::ERB

0.6.4

  * Check for ActionView instead of Rails (#72)

0.6.3

  * Fix HTML escaping for HTML::Pretty (Issue #69)

0.6.2

  * [:html, :js, code] abstraction added

0.6.1

  * HTML::Pretty improved

0.6.0

  * HTML::AttributeMerger: rename option :attr_delimiter to :merge_attrs
  * HTML: rename option :attr_wrapper to :attr_quote

0.5.5

  * HTML pretty: Do not remove empty lines, add newline after doctype

0.5.4

  * HTML::AttributeMerger fixed, it didn't remove first empty attribute values
  * Add HTML::AttributeRemover back, :remove_empty_attrs must be an Array of Strings now
    of the attributes to be removed if empty
  * Simplify [:case] expression grammar
  * Ignore parameter :outvar by sinatra since sinatra assumes also that the buffer is a String,
    they should set :buffer and :generator explicitly if they need the access

0.5.3

  * Only print an message if invalid options are passed to Temple filters or engines
    since many libraries seem to use Slim and Temple in an incorrect way

0.5.2

  * Fix the :outvar problem really

0.5.1

  * Support Sinatra :outvar option in Tilt template

0.5.0

  * Added exception Temple::FilterError which should be thrown by filters